# toy_payments_engine

./: .gitattributes  .gitignore  Cargo.toml  Readme.md  transactions.csv  transactions2.csv
benches/: benchmarks.rs  transactions_100mb.csv  transactions_250.csv
src/: lib.rs  main.rs
src/common/: types.rs
src/managers/: output_manager.rs  transaction_manager.rs
src/models/: client.rs  client_snapshot.rs  client_transactions.rs  transaction.rs
tests/: helpers.rs  integration_tests.rs
tests/inputs/: empty.csv  full.csv  simple.csv
tests/outputs/: big.csv  empty.csv  full.csv  simple.csv
