[package]
name = "toy_payments_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
csv = "1.3.0"
rust_decimal = "1.35.0"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"]}
tokio-util = { version = "0.7", features = ["full"] }
num_cpus = "1.16.0"
futures = "0.3.30"
csv-async = "1.3.0"
rayon = "1.10.0"
