[package]
name = "toy_payments_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
csv = "1.3.0"
rust_decimal = "1.34.2"
rust_decimal_macros = "1.34.2"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rstest = "0.13"

[[bench]]
name = "benchmarks"
harness = false
